# vnptAI-Hackathon-2025

./: .gitignore  Dockerfile  README.md  docker-compose.qdrant.yml  evaluate.py  inference.sh  predict.py  pyproject.toml  stop.py  test.py
data/: val_category.csv
data/data_source/: checkpoint.json
data/data_source/bo_luat/: 11135.json  139264.json  18128.json  18131.json  19482.json  27615.json  6607.json  7853.json  96115.json  96117.json  96122.json  96172.json
data/data_source/hien_phap/: 11234.json  112351.json  118230.json  119683.json  13.json  134025.json  138989.json  141826.json  1534.json  22313.json  26135.json  30463.json  32801.json  36897.json  40642.json  44169.json  46744.json  535.json  6153.json  67193.json  889.json  95942.json
data/data_source/luat/: 101871.json  101872.json  101873.json  101886.json  101890.json  101897.json  101899.json  10207.json  10209.json  10237.json  10392.json  10396.json  10398.json  10420.json  10421.json  10422.json  10423.json  10424.json  10425.json  10426.json  10433.json  10434.json  10435.json  10470.json  10471.json  10474.json  10476.json  10477.json  10478.json  10479.json  10480.json  10481.json  10482.json  10483.json  10484.json  10485.json  10487.json  10491.json  10492.json  10493.json  (+565 more)
data/data_source_thuvien/: checkpoint.json
data/processed/: embed_checkpoint.json
data/qdrant_db/: meta.json
data/qdrant_storage/: raft_state.json
data_pipeline/: crawler.py  crawler_thuvien.py  embedder.py  ingest.py
src/: client.py  config.py  logger.py  utils.py
src/agent/: graph.py  router.py  state.py
(+78 files in other folders)
