[project]
name = "vnpt-ai-hackathon"
version = "0.1.0"
description = "VNPT AI Hackathon Track 2 Solution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "python-dotenv",
    "langgraph",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-experimental",
    "beautifulsoup4",
    "qdrant-client",
    "sympy>=1.14.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "networkx>=3.6.1",
    "ortools>=9.14.6206",
    "cvxpy>=1.7.5",
    "shapely>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest"]
